--- a/index.html
+++ b/index.html
@@ -2602,7 +2602,7 @@
                                                                                                             عاون “صناع الخير” مع شركة IBM العالمية ووزارة الشباب والرياضة ووزارة التضامن الاجتماعي في تنفيذ برنامج تدريب الشباب المصري علي أحدث مهارات ومتطلبات سوق العمل الحديث
                                                                                                         </div>
                                                                                                         <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm">
+                                                                                                            <a  href="/sections/education.html" class="elementor-cta__button elementor-button elementor-size-sm">
                                                                                                                 <span class="elementor-button-content-wrapper">
                                                                                                                     <span
                                                                                                                         class="elementor-button-icon elementor-align-icon-left elementor-button-icon elementor-align-icon-left">
@@ -2690,7 +2690,7 @@
                                                                                                             لتطوير شمل إعادة إعمار المنازل المتهالكة، وتحسين المستوى المعيشي للأسر بتوفير مشروعات تنموية صغيرة
                                                                                                         </div>
                                                                                                         <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm">
+                                                                                                            <a  href="/sections/elmos3dat.html" class="elementor-cta__button elementor-button elementor-size-sm">
                                                                                                                 <span class="elementor-button-content-wrapper">
                                                                                                                     <span
                                                                                                                         class="elementor-button-icon elementor-align-icon-left elementor-button-icon elementor-align-icon-left">
