--- a/index.html
+++ b/index.html
@@ -2676,7 +2676,7 @@
 
                                                                 <div class="elementor-section elementor-inner-section elementor-element elementor-element-6d38302 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="6d38302" data-element_type="section">
                                                                     <div class="elementor-container elementor-column-gap-no">
-                                                                        <div class="elementor-row">
+                                                                        <div class="elementor-row" style="justify-content: center;">
                                                                             <div class="elementor-column elementor-col-40 elementor-inner-column elementor-element elementor-element-352f35d" data-id="352f35d" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
                                                                                 <div class="elementor-column-wrap elementor-element-populated">
                                                                                     <div class="elementor-widget-wrap">
