--- a/index.html
+++ b/index.html
@@ -2826,7 +2826,7 @@
 
                                                                                                         </div>
                                                                                                         <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm" href="sections\health care.html" target="_blank">
+                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm" href="sections\health care.html">
                                                                                                                 <span class="elementor-button-content-wrapper">
                                                                                                                     <span
                                                                                                                         class="elementor-button-icon elementor-align-icon-left elementor-button-icon elementor-align-icon-left">
