--- a/index.html
+++ b/index.html
@@ -4782,7 +4782,34 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
+
                                                         </div>
+
+                                                    </div>
+
+                                                </div>
+
+                                            </div>
+                                            <br>
+                                            <div style="
+                                                                            display: flex;
+                                                                            justify-content: center;
+                                                                            align-items: center;
+                                                                        " class="elementor-element elementor-element-cfe6408 elementor-button-dark elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="cfe6408" data-element_type="widget"
+                                                data-widget_type="button.default">
+                                                <div class="elementor-widget-container">
+                                                    <div class="elementor-button-wrapper">
+                                                        <a href="/news/" class="elementor-button-link elementor-button elementor-size-md" role="button">
+                                                            <span class="elementor-button-content-wrapper">
+                                                                                                <span
+                                                                                                    class="elementor-button-icon elementor-align-icon-left">
+                                                                                                    <i class="fa fa-arrow-circle-o-right"
+                                                                                                        aria-hidden="true"></i>
+                                                                                                </span>
+                                                            <span class="elementor-button-text">عرض
+                                                                                                    المزيد</span>
+                                                            </span>
+                                                        </a>
                                                     </div>
                                                 </div>
                                             </div>
