--- a/index.html
+++ b/index.html
@@ -2088,55 +2088,46 @@
                                                                                 الخير</a>
                                                                             <ul class="sub-menu elementor-nav-menu--dropdown">
                                                                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-1197 current_page_item menu-item-4941">
-                                                                                    <a href="index.html" aria-current="page" class="elementor-sub-item  elementor-item-active">من
+                                                                                    <a href="index.html#info" aria-current="page" class="elementor-sub-item  elementor-item-active">من
                                                                                         نحن </a></li>
                                                                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4942">
-                                                                                    <a href="home-2/index.html" class="elementor-sub-item">الفروع</a>
+                                                                                    <a href="index.html" class="elementor-sub-item">الفروع</a>
                                                                                 </li>
                                                                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4958">
-                                                                                    <a href="home-3/index.html" class="elementor-sub-item">مجلس
+                                                                                    <a href="index.html#mgles" class="elementor-sub-item">مجلس
                                                                                         الامناء</a></li>
                                                                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6524">
-                                                                                    <a href="home-4/index.html" class="elementor-sub-item">الخدمات</a>
+                                                                                    <a href="index.html#khdmat" class="elementor-sub-item">الخدمات</a>
                                                                                 </li>
                                                                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6524">
-                                                                                    <a href="home-4/index.html" class="elementor-sub-item">للتواصل
+                                                                                    <a href="contact-us/index.html" class="elementor-sub-item">للتواصل
                                                                                         معنا</a></li>
 
                                                                             </ul>
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4962">
-                                                                            <a href="campaigns-grid/index.html" class="elementor-item">مدونه الاخبار</a>
-                                                                            <ul class="sub-menu elementor-nav-menu--dropdown">
-                                                                            </ul>
+                                                                            <a href="news/index.html" class="elementor-item">مدونه الاخبار</a>
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4945">
-                                                                            <a href="who-we-are/index.html" class="elementor-item">المبادرات</a>
-                                                                            <ul class="sub-menu elementor-nav-menu--dropdown">
-                                                                            </ul>
+                                                                            <a href="index.html#mobadra" class="elementor-item">المبادرات</a>
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4948">
-                                                                            <a href="blog/index.html" class="elementor-item">للتبرع</a>
-                                                                            <ul class="sub-menu elementor-nav-menu--dropdown">
-                                                                            </ul>
+                                                                            <a href="donation/index.html" class="elementor-item">للتبرع</a>
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4963">
-                                                                            <a href="story/index.html" class="elementor-item">تطوع معنا</a>
-                                                                            <ul class="sub-menu elementor-nav-menu--dropdown">
-
-                                                                            </ul>
+                                                                            <a href="become-a-volunteer/index.html" class="elementor-item">تطوع معنا</a>
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4963">
-                                                                            <a href="story/index.html" class="elementor-item">شركاء النجاح </a>
+                                                                            <a href="index.html#team" class="elementor-item">شركاء النجاح </a>
 
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4963">
-                                                                            <a href="story/index.html" class="elementor-item">القطاعات الحرفيه
+                                                                            <a href="index.html#qta3" class="elementor-item">القطاعات الحرفيه
                                                                             </a>
 
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4963">
-                                                                            <a href="story/index.html" class="elementor-item">التاثير</a>
+                                                                            <a href="index.html#elqym" class="elementor-item">التاثير</a>
 
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4968" style="visibility: hidden;">
@@ -2789,7 +2780,7 @@
                                                             <div class="elementor-widget-wrap">
                                                                 <div class="elementor-element elementor-element-25f30a0 elementor-align-center elementor-widget elementor-widget-heading" data-id="25f30a0" data-element_type="widget" data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container">
-                                                                        <h2 class="elementor-heading-title elementor-size-default">
+                                                                        <h2 id="qta3" class="elementor-heading-title elementor-size-default">
                                                                             القطاعات التنموية</h2>
                                                                     </div>
                                                                 </div>
@@ -3032,7 +3023,7 @@
                                                                 <div class="elementor-element elementor-element-1498539 elementor-align-center elementor-widget elementor-widget-heading" data-id="1498539" data-element_type="widget" data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container"> <span class="sub-title">
                                                                         </span>
-                                                                        <h2 class="elementor-heading-title elementor-size-default">
+                                                                        <h2 id="info" class="elementor-heading-title elementor-size-default">
                                                                             معلومات عنا
                                                                         </h2>
                                                                     </div>
@@ -3426,8 +3417,8 @@
                                                                                     <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-27b7936" data-id="27b7936" data-element_type="column">
                                                                                         <div class="elementor-column-wrap elementor-element-populated">
                                                                                             <div class="elementor-widget-wrap">
-                                                                                                <div class="elementor-element elementor-element-2bb9454 elementor-align-center elementor-widget elementor-widget-heading" data-id="2bb9454" data-element_type="widget" data-widget_type="heading.default">
-                                                                                                    <div class="elementor-widget-container">
+                                                                                                <div id="mgles" class="elementor-element elementor-element-2bb9454 elementor-align-center elementor-widget elementor-widget-heading" data-id="2bb9454" data-element_type="widget" data-widget_type="heading.default">
+                                                                                                    <div  class="elementor-widget-container">
                                                                                                         <h2 class="elementor-heading-title elementor-size-default">اعضاء مجلس الامناء
                                                                                                         </h2>
                                                                                                     </div>
@@ -3845,7 +3836,7 @@
                                                                 <div class="elementor-element elementor-element-2205fd2 elementor-align-center elementor-widget elementor-widget-heading" data-id="2205fd2" data-element_type="widget" data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container"> <span class="sub-title">الحملات
                                                                         </span>
-                                                                        <h2 class="elementor-heading-title elementor-size-default">
+                                                                        <h2 id="khdmat" class="elementor-heading-title elementor-size-default">
                                                                             أحدث حملات التبرع</h2>
                                                                     </div>
                                                                 </div>
@@ -4109,7 +4100,7 @@
                                                             <div class="elementor-widget-wrap">
                                                                 <div class="elementor-element elementor-element-556293a elementor-align-center elementor-widget__width-initial elementor-widget elementor-widget-heading" data-id="556293a" data-element_type="widget" data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container">
-                                                                        <h2 class="elementor-heading-title elementor-size-default">
+                                                                        <h2 id="elqym" class="elementor-heading-title elementor-size-default">
                                                                             الـــقيم
 
                                                                         </h2>
@@ -4420,7 +4411,7 @@
                                                             <div class="elementor-widget-wrap">
                                                                 <div class="elementor-element elementor-element-ca53775 elementor-align-center elementor-widget elementor-widget-heading" data-id="ca53775" data-element_type="widget" data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container"> <span class="sub-title">الإنجازات</span>
-                                                                        <h2 class="elementor-heading-title elementor-size-default">
+                                                                        <h2 id="mobadra" class="elementor-heading-title elementor-size-default">
                                                                             أحدث المبادرات الخيرية
                                                                         </h2>
                                                                     </div>
@@ -4823,7 +4814,7 @@
                                                             <div class="elementor-widget-wrap">
                                                                 <div class="elementor-element elementor-element-91370d6 elementor-align-center elementor-widget elementor-widget-heading" data-id="91370d6" data-element_type="widget" data-widget_type="heading.default">
                                                                     <div class="elementor-widget-container">
-                                                                        <h2 class="elementor-heading-title elementor-size-default">
+                                                                        <h2 id="team" class="elementor-heading-title elementor-size-default">
                                                                             الشركاء الحكوميون
                                                                         </h2>
                                                                     </div>
