--- a/sections/health care.html
+++ b/sections/health care.html
@@ -2120,7 +2120,7 @@
                                                                                 dir="rtl">
                                                                                 <li
                                                                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4942">
-                                                                                    <a href="../health care.html"
+                                                                                    <a href="#"
                                                                                         class="elementor-sub-item">القطاع
                                                                                         الطبي
                                                                                     </a>
