--- a/index.html
+++ b/index.html
@@ -5205,7 +5205,7 @@
                 </div>
             </li>
             <li class="donate"> <a class="footer-cart-contents" href="donation/index.html"><i
-                        class="fa fa-arrow-circle-o-right"></i> Donate Now</a></li>
+                        class="fa fa-arrow-circle-o-right"></i> تبرع الان</a></li>
         </ul>
     </div>
     <link href="https://fonts.googleapis.com/css?family=Barlow:400%2C700%7CRoboto:400" rel="stylesheet" property="stylesheet" media="all">
