--- a/sections/einak fe einena/einak fe einena.html
+++ b/sections/einak fe einena/einak fe einena.html
@@ -2323,7 +2323,7 @@
                                                                         </li>
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page current_page_parent menu-item-has-children menu-item-4948">
-                                                                            <a href="../../news/index.html"
+                                                                            <a href="../news/news.html"
                                                                                 class="elementor-item">اخبارنا</a>
 
                                                                         </li>
@@ -2420,7 +2420,7 @@
                                                                         </li>
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page current_page_parent menu-item-has-children menu-item-4948">
-                                                                            <a href="../../news/index.html">اخبارنا</a>
+                                                                            <a href="../news/news.html">اخبارنا</a>
 
                                                                         </li>
 
@@ -3276,7 +3276,7 @@
                 </div>
             </li>
             <li class="donate"> <a class="footer-cart-contents" href="../../donation/index.html"><i
-                        class="fa fa-arrow-circle-o-right"></i> Donate Now</a></li>
+                        class="fa fa-arrow-circle-o-right"></i> تبرع الان</a></li>
         </ul>
     </div>
     <link rel='stylesheet' id='elementor-post-10-css'
