--- a/sections/community.html
+++ b/sections/community.html
@@ -2196,7 +2196,7 @@
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4963">
                                                                             <a href="../stories.html"
-                                                                                class="elementor-item">التأثير</a>
+                                                                                class="elementor-item">الاثر التنموي</a>
 
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4968"
@@ -2291,7 +2291,7 @@
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-4963">
                                                                             <a href="../stories.html"
-                                                                                class="elementor-item">التأثير</a>
+                                                                                class="elementor-item">الاثر التنموي</a>
 
                                                                         </li>
 
