--- a/donate.html
+++ b/donate.html
@@ -2193,7 +2193,7 @@
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4963">
                                                                             <a href="stories.html"
-                                                                                class="elementor-item">التأثير</a>
+                                                                                class="elementor-item">الاثر التنموي</a>
 
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4968"
@@ -2287,7 +2287,7 @@
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-4963">
                                                                             <a href="stories.html"
-                                                                                class="elementor-item">التأثير</a>
+                                                                                class="elementor-item">الاثر التنموي</a>
 
                                                                         </li>
 
