--- a/donations.html
+++ b/donations.html
@@ -2168,7 +2168,7 @@
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4963">
                                                                             <a href="stories.html"
-                                                                                class="elementor-item">التأثير</a>
+                                                                                class="elementor-item">الاثر التنموي</a>
 
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4968"
@@ -2260,7 +2260,7 @@
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-4963">
                                                                             <a href="stories.html"
-                                                                                class="elementor-item">التأثير</a>
+                                                                                class="elementor-item">الاثر التنموي</a>
 
                                                                         </li>
 
