--- a/story-3.html
+++ b/story-3.html
@@ -22,7 +22,7 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <link media="all" href="/content/cache/autoptimize/css/autoptimize_f57d56937756cedd3e330e14994f8274.css"
         rel="stylesheet" />
-    <title>التأثير | صناع الخير</title>
+    <title>الاثر التنموي | صناع الخير</title>
     <link rel="shortcut icon" type="image/png" href="assets/imgs/logo.png">
     <link rel='dns-prefetch' href='http://sona3elkhair.com/' />
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
@@ -2179,7 +2179,7 @@
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4963">
                                                                             <a href="stories.html"
-                                                                                class="elementor-item elementor-item-active">التأثير</a>
+                                                                                class="elementor-item elementor-item-active">الاثر التنموي</a>
 
                                                                         </li>
                                                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-4968"
@@ -2271,7 +2271,7 @@
                                                                         <li
                                                                             class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-4963">
                                                                             <a href="stories.html"
-                                                                                class="elementor-item">التأثير</a>
+                                                                                class="elementor-item">الاثر التنموي</a>
 
                                                                         </li>
 
